merge: logic output-return policy subsystem (2.0.4 architecture: OverloadedPatternProviderLogic delegates, dispatch controllers, batch/overflow persistence, return policy, UnlimitedReturnInventory + ReturnSlotFilter for 1.20; Java17 Math.clamp fixes); thunderbolt_version 1.0.3; E7=3019